--- a/recipe_style.css
+++ b/recipe_style.css
@@ -126,3 +126,11 @@ address {
 
 }
 
+img.telegram {
+  width: 20px;
+  height: 20px;
+  margin-bottom: 0;
+  margin-left: 2px;
+  bottom: 0px;
+  margin-top: 0;
+}
